# min-url-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  schema.sql
redirect-svc/: Cargo.toml  Dockerfile
redirect-svc/src/: main.rs
slug-filler/: Cargo.toml  Dockerfile
slug-filler/src/: main.rs
write-svc/: .dockerignore  Cargo.toml  Dockerfile
write-svc/src/: main.rs
