[package]
name = "redirect-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1"] }
deadpool-redis = { version = "0.20.0", features = ["rt_tokio_1"] }
moka = { version = "0.12.10", features = ["future"] }
once_cell = "1.21.3"
tokio = { version = "1.45.0", features = ["full"] }
