[package]
name = "redirect-svc"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1"] }
deadpool-redis = { version = "0.20.0", features = ["rt_tokio_1"] }
moka = { version = "0.12.10", features = ["future"] }
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = [
    "compression-full",
    "decompression-full",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
